# dota_predict

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
bot/: __main__.py
bot/handlers/: handlers.py
lab/: Dockerfile  entrypoint.sh
mlflow/: Dockerfile  entrypoint.sh
tests/: test_bot.py
