[tool.poetry]
name = "tf-dota-pred"
version = "0.1.0"
description = "Dota 2 draft prediction"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lab.dependencies]
jupyterlab = "^4.0.0"
boto3 = "^1.26.142"
mlflow = "^2.3.2"
polars = "^0.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
