[tool.poetry]
name = "tf-dota-pred"
version = "0.1.0"
description = "Dota 2 draft prediction"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lab.dependencies]
jupyterlab = "^4.0.0"
boto3 = "^1.26.142"
mlflow = "^2.3.2"
polars = "^0.18.4"


[tool.poetry.group.bot.dependencies]
aiogram = "3.0.0b7"
sqlalchemy = "^2.0.17"


[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
addopts = "--ignore=pgdata -p no:warnings"
pythonpath = [
  ".", "bot",
]

asyncio_mode="auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
